# errortools

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
examples/: chain.rs  custom_format.rs  format_error.rs  many_errors.rs  one_line.rs  transparent.rs  tree.rs  with_context.rs
plugins/errortools/.claude-plugin/: plugin.json
plugins/errortools/skills/errortools/: SKILL.md
plugins/errortools/skills/errortools/references/: formatting.md  many-errors.md  suggestions.md  with-context.md
plugins/errortools/skills/migrating-from-unstructured/: SKILL.md
plugins/errortools/skills/rust-error-handling/: SKILL.md
plugins/errortools/skills/structured-error-handling/: SKILL.md
plugins/errortools/skills/using-errortools/: SKILL.md
plugins/errortools/skills/using-errortools/references/: formatting.md  many-errors.md  suggestions.md  with-context.md
src/: add.rs  chain.rs  connectors.rs  indent.rs  lib.rs  main_result.rs  many_errors.rs  oneline.rs  path_display.rs  suggestion.rs  tests.rs  tree.rs  with_context.rs
src/add/: mod.rs  separator.rs
src/many_errors/: add.rs  iter.rs  listing.rs  mod.rs  node.rs
src/many_errors/strategy/: bullets.rs  inline.rs  list.rs  marked.rs  mod.rs  one_line.rs  tree.rs
src/with_context/: format.rs  mod.rs
tests/: max_custom.rs
