[package]
name = "errortools"
authors = ["Max Wase <max.vvase@gmail.com>"]
version = "0.3.0"
edition = "2024"
description = "Quality of life utilities for error handling in Rust."
repository = "https://github.com/maxwase/errortools"
homepage = "https://github.com/maxwase/errortools"
documentation = "https://docs.rs/errortools"
license = "MIT"
readme = "README.md"
keywords = ["error", "main", "thiserror", "format", "chain"]
categories = ["rust-patterns", "command-line-interface", "no-std"]
include = ["src/**/*.rs", "examples/**/*.rs", "README.md", "CHANGELOG.md", "LICENSE*"]

[dependencies]
derive-where = "1.6.1"
itertools = { version = "0.15", default-features = false }

[dev-dependencies]
pretty_assertions = "1.4.1"
thiserror = "2"

[features]
default = ["std"]

std = ["alloc", "itertools/use_std"]
alloc = []

[[example]]
name = "with_context"
required-features = ["std"]

[[example]]
name = "many_errors"
required-features = ["std"]
